@@ -1,0 +1,7 @@
+﻿using osu.Framework.Graphics;
+
+namespace osu.XR.Components.Groups {
+	public interface IHasIcon {
+		Drawable CreateIcon ();
+	}
+}
