@@ -1,0 +1,5 @@
+﻿namespace osu.XR.Components.Groups {
+	public interface IHasName {
+		string DisplayName { get; }
+	}
+}
