@@ -1,0 +1,14 @@
+﻿using osu.Framework.XR.Components;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace osu.XR.Editor {
+	public class SceneContainer : Container3D {
+		public SceneContainer () {
+			Name = "Scene";
+		}
+	}
+}
